# georisklab

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  START_HERE.md  constraints.txt  environment.yml  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: data_source.md  method_task.md
.github/workflows/: ci.yml
config/: sources.sample.yml
dashboard/: index.html
data/metadata/: analysis_panel_manifest.json  source_manifest.json
data/processed/: sample_analysis_panel.csv  sample_gdelt_country_monthly.csv  sample_gpr_monthly.csv  sample_macro_controls_monthly.csv  sample_market_returns_monthly.csv
docs/: ACCEPTANCE_CRITERIA.md  API_CONTRACTS.md  DATA_SOURCES.md  GRILL_QUESTIONS.md  METHODOLOGY.md  PROJECT_SPEC.md  REPRODUCIBILITY.md  ROADMAP.md
georisklab/: __init__.py
georisklab/econometrics/: __init__.py  baseline.py  local_projection.py  results.py
georisklab/features/: panel.py  returns.py  shocks.py
georisklab/ingest/: __init__.py  gdelt.py  gpr.py  market_returns.py  source_metadata.py  world_bank.py
georisklab/utils/: config.py  (+3 more)
reports/: v0_1a_findings.md
scripts/: _bootstrap.py  build_features.py  build_monthly_data.py  build_real_monthly_data.py  build_report.py  make_figures.py  run_forecasts.py  run_regressions.py  run_task.py  validate_data.py
tests/: test_ci_contracts.py  test_econometrics.py  test_features.py  test_forecasting.py  test_imports.py  test_ingest.py  test_public_outputs.py  test_real_monthly_pipeline.py  test_scripts.py  test_utils.py  test_validation.py  test_visualization.py
(+14 files in other folders)
